# sandbox

./: .gitignore  README.md  Zscaler.cer  Zscaler2.pfx  Zscaler3.pfx  Zscaler4_a.pfx  Zscaler4_ea.pfx  Zscaler5.pfx  Zscaler6.p7b  Zscaler6_.p7b  android-studio.txt
Code/: memo_python
Code/LKM/: Makefile.arm  at91_adc.c  at91_adc.c.svg2  hello.c  hello.ko.rmmod  hello.mod.c  hello_2_log.c  hello_3_cdev.c  hello_4_cdev_dev.c  hello_5.c  log.txt  memo  memo_driver  modules.order  pwm-atmel-tcb-parking.c
Code/LKM-DMA/: Makefile.arm  Module.symvers  README  at91_adc.c  at91_adc_noIRQ.c  at91_adc_pdc.c  at91_adc_pdc.h  at91_adc_ref.c  at91_adc_ref.mod.c  at91_adc_with_pdc.mod.c  cmd_adc_dma  hello_adc_dma.c  hello_adc_dma.h  hello_adc_dma.mod.c  log.txt  log2.txt  modules.order  put.sh  pwm-atmel-tcb-cpw.c  pwm-atmel-tcb-cpw.c.ref
Code/LKM-M12/: Makefile  cmd  gpio_custom_debounced.c  gpio_custom_debounced.mod.c  log.h  modules.order  put.sh
Code/LKM2/: Makefile.arm  lnmod.sh  put  pwm-atmel-hlcdc.mod.c  pwm-atmel-tcb-cpw.c  pwm-atmel-tcb.c  pwm-atmel-tcb.mod.c  pwm-atmel.mod.c
Code/bash/: test_int
Code/checker/: MissingMemberInit.cpp  MissingMemberInit.h
Code/cmake/: CMakeLists.txt  toto.cpp
Code/drivers/: HOWTO.TXT  Makefile.arm  README.TXT  at91_adc.c  hello.c  hello.mod.c  hello_cdev.c  hello_platform.c  hello_sysfs.c  hello_sysfs.mod.c  modules.order  pwm-atmel-tcb-cpw.c  pwm-atmel-tcb-cpw.mod.c  safety_control.c  safety_control.mod.c  scan_ip  scan_ip_  scann_port
Code/exception/: try  try.cpp
Code/qt/main/: CMakeLists.txt  Makefile  main  main.cpp  main.pro
Code/qt/object3/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.keep  CMakeLists.txt.ok  Makefile  Test.cpp  Test.h  cmake_install.cmake  helloworld  helloworld_automoc.cpp  object3
Code/smc/merge/: Makefile  Makefile.am  Makefile.in  Test.cpp  Test.h  TestA.cpp  TestA.h  TestB.cpp  TestB.h  config.h  config.status  main.cpp  merge.sh  test  testA.sm  testA_sm.cpp  testA_sm.h  testB.sm  testB_sm.cpp  testB_sm.h  test_common.sm  test_prodA.sm  test_prodB.sm
Code/smc/merge/.deps/: test-Test.Po  test-TestA.Po  test-TestB.Po  test-main.Po  test-testA_sm.Po  test-testB_sm.Po  testmerge-Test.Po  testmerge-TestA.Po  testmerge-TestB.Po  testmerge-main.Po  testmerge-testA_sm.Po  testmerge-testB_sm.Po
Code/smc/merge/autom4te.cache/: output.1  requests  traces.0  traces.1
Coin/: bitcoin-target.txt  bitnodes_cmd.txt  hash-block-125552.txt  snap.txt
lisp/: .#toto.txt  files_list.txt  multiple-replace.el~  multipleReplace.el~  parsing_error.el  replace-strings.el  toto.txt  toto.txt~
(+233 files in other folders)
